--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@
 .container {
     height: 100vh;
     width: 100%;
+    display: flex;
+    justify-self: center;
+    align-items: center;
     overflow: hidden;
     background: linear-gradient(135deg ,#153677,#4e085f);
 }
